chore: add ignore rules and project source